// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-kg5mu9-0 jqapip"
>
  <h1
    class="profiles__Title-kg5mu9-1 ctqAIZ"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-kg5mu9-2 gYJdty"
  >
    <li
      class="profiles__Item-kg5mu9-5 fkziAc"
    >
      <img
        class="profiles__Picture-kg5mu9-4 jiejrd"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-kg5mu9-3 iosnza"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-kg5mu9-0 jqapip"
>
  <h1
    class="profiles__Title-kg5mu9-1 ctqAIZ"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-kg5mu9-2 gYJdty"
  >
    <li
      class="profiles__Item-kg5mu9-5 fkziAc"
    >
      <img
        class="profiles__Picture-kg5mu9-4 jiejrd"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-kg5mu9-3 iosnza"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
